--- a/styles.css
+++ b/styles.css
@@ -126,10 +126,65 @@ table {
 
 th,
 td {
-	padding: 8px;
+	padding: 0.5rem;
 	text-align: left;
 }
 
 th {
 	background-color: #ffeb94;
+}
+
+.fulltd {
+	text-align: center;
+	padding: 1.2rem;
+}
+
+.add-detail {
+	padding: 0.5rem 1rem;
+	border: none;
+	border-radius: 8px;
+	background-color: #ffeb94;
+	color: #333;
+	font-size: 1rem;
+	cursor: pointer;
+	transition: 225ms ease;
+}
+
+.add-detail:hover {
+	background-color: #fbe15e;
+}
+
+/* Add Item */
+#plus-wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#add-item-btn {
+	width: 3rem;
+	height: 3rem;
+	border-radius: 50%;
+	background-color: #ffeb94;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 1.5rem;
+	color: #333;
+	cursor: pointer;
+	transition: 225ms ease;
+}
+
+/* form */
+input,
+textarea {
+	width: 100%;
+	padding: 0.5rem;
+	margin: 0.5rem 0 1rem 0;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+}
+
+textarea {
+	resize: none;
 }
